pages/assets/style.css
@font-face { font-family: "KosugiMaru"; src: url("KosugiMaru-Regular.ttf"); }

HTML { font-family: 'MS UI Gothic', 'KosugiMaru', sans-serif; background-image: url("bg.gif"); background-color: #4A8B4A; }
BODY { width: 960px; margin: 0 auto; }
@media (max-width: 960px) { BODY { width: 100%; } }

A { text-decoration: none; font-weight: bold; }
A:hover { text-decoration: underline; }

.card { padding: 8px; margin: 8px; text-align: center; overflow: auto; clear: both; background-color: #FFF; border-right: solid #040; border-right-width: 4px; border-bottom: solid #040; border-bottom-width: 4px; }
.subcard { background-color: #EEE; border-right: solid #888; border-right-width: 2px; border-bottom: solid #888; border-bottom-width: 2px; }

.slogan { font-style: italic; }

#postform TABLE { text-align: left; font-weight: bold; margin: 0 auto; }
#postform INPUT, #postform TEXTAREA { width: 400px; box-sizing: border-box; }
@media (max-width: 960px) { #postform INPUT, #postform TEXTAREA { width: 100%; } }
#postform #comment { resize: vertical; }

#adminform TABLE { text-align: left; display: inline; }
#adminform #submit { width: 100%; }

.post { text-align: left; }
.post IMG { border: 0px; }

.rank { font-weight: bold; color: gold; }
.name { font-weight: bold; color: #007F00; }
.subject { font-weight: bolder; color: #F00; }
.time { margin-left: 4px; color: #7F7F7F; }

.commands { float: right; }
.commands A { margin-left: 8px; }

.body { padding: 4px; height: 100%; overflow: auto; }
.body IMG { float: left; margin: 4px; }
.body SPAN { white-space: pre-wrap; word-wrap: break-word; _white-space: pre; }

.reply-preview { width: 300px; }

.credits SPAN { font-weight: bold; }

.pagesel { float: left; margin: 0px; }
.pagesel A { margin-left: 4px; margin-right: 4px; }

